[tool.poetry]
name = "airbnb-clone"
version = "0.1.0"
description = ""
authors = ["Yoooooooun <ionrabit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
